# uv-init

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  initialize_project.sh  logging-setup.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
blog/: .Ulysses-Group.plist  Intro Blog UV-init.md  claude-version1.md  setting up a python project.md  uv-init templating devtools for project setup with uv.md  uv.md
docs/: api.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  ty-migration-notes.md  usage.rst
src/uv_init/: __init__.py  __main__.py  cli.py  config.py  dev_deps.py  parse_docs.py  router.py  setup_git_repo.py
src/uv_init/template/: README.md  ruff-config.toml
src/uv_start/: __init__.py  __main__.py  cli.py  config.py  dev_deps.py  exceptions.py  parse_docs.py  router.py  setup_git_repo.py
src/uv_start/template/: colors.py  commitizen-config.toml  data-CLAUDE.md  hhlab_style01.mplstyle  pytest-config.toml  sample.ipynb  ty-config.toml
template/: .bumpversion.cfg  .env  .gitignore  .pre-commit-config.yaml  LICENSE  README-package.md  README-workspace.md  README.md  commitizen-config.toml  commitizen-workspace-config.toml  config.py  mypy-config.toml  pytest-config.toml  ruff-config.toml  settings.json  ty-config.toml
template/.github/workflows/: ci.yml  release.yml
tests/: test__main__.py  test_cli.py  test_config.py  test_dev_deps.py  test_parse_docs.py  test_router.py
